--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon",
-    "build":"npx tsc"
+    "start": "npm run build && npx nodemon ./dist/index.js",
+    "build": "npx -p typescript tsc "
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.13.4",
-    "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "express": "^4.21.2",
     "@prisma/client": "^6.3.1",
     "@types/request": "^2.48.12",
     "bcrypt": "^5.1.1",
