Added JWT_SECRET in docker compose

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 PORT = 5000
 JWT_SECRET = 132324
-DATABASE_URL='postgresql://neondb_owner:npg_9YkRE4KxNHTZ@ep-bold-hall-adurntf9-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL="mysql://root:negi@localhost:3306/smart_app"
